--- a/src/styles/Goal.css
+++ b/src/styles/Goal.css
@@ -1,11 +1,22 @@
 .goal-wrapper {
-  width: 100dvw;
-  height: 75dvh;
+  width: 100vw;
+  height: 65vh;
   background-color: #dfd3c3;
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.goal-wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 1;
 }
 
 .goal-wrapper ul {
@@ -15,6 +26,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  z-index: 3;
 }
 
 .goal-wrapper ul li {
