--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,7 +1,7 @@
 .hero-wrapper {
   background-color: #f8ede3;
-  height: 100dvh;
-  width: 100dvw;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
