--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -1,14 +1,14 @@
-.team {
+.team-wrapper {
   width: 100vw;
-  height: 90dvh;
+  height: 90vh;
   background-color: #f8ede3;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.team .title {
+.team-wrapper .title {
   color: #000;
   font-family: Inter;
   font-size: 96px;
@@ -16,30 +16,55 @@
   text-align: center;
 }
 
+.card-wrapper {
+  width: 100vw;
+  height: auto;
+  padding: 2rem 0;
+}
+
+.swiper-slide {
+  width: 55vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  /* display: none; */
+}
+
 .card {
-  width: 1180px;
-  height: 488px;
+  width: 55vw;
+  height: 60vh;
   background-color: white;
   border-radius: 20px;
   box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.25);
-}
-.card ul li {
   display: flex;
-  margin: 4vh 4vw;
-  justify-content: space-evenly;
-  vertical-align: middle;
-  /* border: #000 1px solid; */
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
-.card-img {
-  width: 50%;
+.card .card-img {
+  width: 24vw;
+  height: 55vh;
+  border-radius: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.card-content {
+
+.card .card-content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   margin-left: 2vw;
 }
-.card-name {
+.card .card-content .card-name {
   color: #000;
   font-family: Inter;
   font-size: 64px;
@@ -48,7 +73,7 @@
   line-height: normal;
   margin-bottom: 16px;
 }
-.card-position {
+.card .card-content .card-position {
   color: #000;
   font-family: Inter;
   font-size: 24px;
@@ -56,7 +81,7 @@
   font-weight: 700;
   line-height: normal;
 }
-.card-desc {
+.card .card-content .card-desc {
   color: #000;
   font-family: Inter;
   font-size: 32px;
@@ -66,15 +91,23 @@
   margin-top: 44px;
   margin-bottom: 60px;
 }
-.card-social {
+.card .card-content .card-social {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   vertical-align: middle;
 }
-.card-social img {
+.card .card-content .card-social img {
   width: 70px;
   height: 70px;
   margin-right: 32px;
+}
+
+.swiper-pagination {
+  --swiper-theme-color: #000;
+}
+
+.slider-arrow {
+  --swiper-theme-color: #000;
 }
