--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -44,3 +44,12 @@
   background-position: center;
   margin-right: 24px;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
