--- a/src/styles/Service.css
+++ b/src/styles/Service.css
@@ -81,3 +81,12 @@
   justify-content: space-between;
   align-items: start;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
