--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -111,3 +111,12 @@
 .slider-arrow {
   --swiper-theme-color: #000;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
