--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -66,3 +66,12 @@
   background-size: cover;
   background-position: center;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
