--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -141,3 +141,12 @@
   height: 60px;
   margin: 12px;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
