--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -91,3 +91,12 @@
   line-height: normal;
   margin-top: 50px;
 }
+
+/* default large screen */
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1023px) {
+}
+
+/* small screen */
+@media (max-width: 767px) {
+}
