--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -29,7 +29,7 @@
 }
 
 .contact-section {
-  width: 560px;
+  width: 30vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -58,8 +58,8 @@
 }
 
 .contact-symbol {
-  height: 55px;
-  width: 42px;
+  height: 3vw;
+  width: 2vw;
   margin-right: 15px;
   background-position: center;
   background-size: cover;
@@ -70,7 +70,7 @@
 }
 
 .menu-section {
-  width: 140px;
+  width: 8vw;
   height: 45vh;
   display: flex;
   flex-direction: column;
@@ -108,13 +108,13 @@
 
 .newsletter-section .message-box {
   width: 100%;
-  height: 40px;
+  height: 2vw;
   display: flex;
   flex-direction: row;
 }
 
 .newsletter-section .input-section {
-  width: 280px;
+  width: 15vw;
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -123,7 +123,7 @@
 }
 
 .newsletter-section .sign-up-section {
-  width: 80px;
+  width: 4vw;
   background-color: #d0b8a8;
   display: flex;
   align-items: center;
@@ -137,8 +137,8 @@
 }
 
 .newsletter-section ul li .social-icon {
-  width: 60px;
-  height: 60px;
+  width: 3vw;
+  height: 3vw;
   margin: 12px;
 }
 
