--- a/src/styles/Goal.css
+++ b/src/styles/Goal.css
@@ -7,13 +7,12 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .goal-wrapper video {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  width: 250vh;
   height: 100%;
   object-fit: cover;
   z-index: 1;
@@ -30,7 +29,7 @@
 }
 
 .goal-wrapper ul li {
-  width: 450px;
+  width: 100vw;
   height: 75%;
   margin: 20px;
   display: flex;
@@ -40,8 +39,8 @@
 }
 
 .goal-icon {
-  width: 360px;
-  height: 200px;
+  width: 15vw;
+  height: 10vw;
   background-size: cover;
   background-position: center;
 }
@@ -56,7 +55,7 @@
 }
 
 .goal-desc {
-  width: 360px;
+  width: 20vw;
   color: #000;
   font-family: Inter;
   font-size: 19px;
