--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -16,8 +16,8 @@
 }
 
 .ebook-wrapper .ebook-img {
-  height: 550px;
-  width: 450px;
+  height: 30vw;
+  width: 30vw;
   background-image: url("../assets/eBook.png");
   background-size: cover;
   background-position: center;
@@ -59,30 +59,31 @@
   width: 80%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .company-desc .company-logo {
-  width: 150px;
-  height: 150px;
-  background-image: url("../assets/eBook.png");
+  width: 18vw;
+  height: 10vw;
+  background-image: url("../assets/logo.png");
   background-size: cover;
   background-position: center;
 }
 
 .company-desc .company-slogan {
-  width: 300px;
+  width: 20vw;
   color: #000;
   font-family: Inter;
   font-size: 19px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-left: 20px;
 }
 
 .desc-wrapper .description {
-  width: 520px;
+  width: 35vw;
   color: #000;
   font-family: Inter;
   font-size: 23px;
