--- a/src/styles/Service.css
+++ b/src/styles/Service.css
@@ -26,8 +26,8 @@
 }
 
 .service-content .service-li-element {
-  width: 520px;
-  height: 300px;
+  width: 27vw;
+  height: 16vw;
   margin: 20px;
   display: flex;
   flex-direction: column;
