--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,6 @@
 .about {
   width: 100vw;
-  height: 60vh;
+  height: 33.75vw;
   background-color: #dfd3c3;
   display: flex;
   flex-direction: row;
@@ -21,19 +21,19 @@
   width: 100%;
   color: #000;
   font-family: Inter;
-  font-size: 84px;
+  font-size: 4.375vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0.5vw;
+  margin-bottom: 0.5vw;
 }
 
 .about-content .about-desc {
   width: 26vw;
   color: #000;
   font-family: Inter;
-  font-size: 19px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -45,14 +45,14 @@
   background-color: #7d6e83;
   color: #fff;
   font-family: Inter;
-  font-size: 19px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  margin-top: 1.5vw;
+  margin-bottom: 0.5vw;
   border: none;
-  border-radius: 35px;
+  border-radius: 1.8vw;
   cursor: pointer;
   display: flex;
   justify-content: center;
