--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100vw;
-  height: 75vh;
+  height: 30vw;
   background-color: #7d6e83;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
 .footer-wrapper {
   width: 85vw;
   height: 100%;
-  padding-top: 15vh;
+  padding-top: 8.34vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -21,11 +21,11 @@
 .footer-section-title {
   color: #fff;
   font-family: Inter;
-  font-size: 42px;
+  font-size: 2vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 24px;
+  margin-bottom: 0.065vw;
 }
 
 .contact-section {
@@ -50,17 +50,17 @@
   align-items: center;
   color: #fff;
   font-family: Inter;
-  font-size: 19px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin: 10px;
+  margin: 0.5vw;
 }
 
 .contact-symbol {
   height: 3vw;
   width: 2vw;
-  margin-right: 15px;
+  margin-right: 0.8vw;
   background-position: center;
   background-size: cover;
 }
@@ -71,7 +71,7 @@
 
 .menu-section {
   width: 8vw;
-  height: 45vh;
+  height: 20vw;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -86,13 +86,13 @@
 }
 
 .menu-section ul li {
-  margin-bottom: 24px;
+  margin-bottom: 1.25vw;
 }
 
 .menu-section ul li a {
   color: #fff;
   font-family: Inter;
-  font-size: 24px;
+  font-size: 1.25vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -115,15 +115,17 @@
 
 .newsletter-section .input-section {
   width: 15vw;
+  font-size: 1vw;
   background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: start;
-  padding-left: 10px;
+  padding-left: 0.5vw;
 }
 
 .newsletter-section .sign-up-section {
   width: 4vw;
+  font-size: 1vw;
   background-color: #d0b8a8;
   display: flex;
   align-items: center;
@@ -139,7 +141,7 @@
 .newsletter-section ul li .social-icon {
   width: 3vw;
   height: 3vw;
-  margin: 12px;
+  margin: 0.625vw;
 }
 
 /* default large screen */
