--- a/src/styles/Goal.css
+++ b/src/styles/Goal.css
@@ -1,6 +1,6 @@
 .goal-wrapper {
   width: 100vw;
-  height: 65vh;
+  height: 36.57vw;
   background-color: #dfd3c3;
   position: relative;
   display: flex;
@@ -12,7 +12,7 @@
 
 .goal-wrapper video {
   position: absolute;
-  width: 250vh;
+  width: 140.63vw;
   height: 100%;
   object-fit: cover;
   z-index: 1;
@@ -31,7 +31,7 @@
 .goal-wrapper ul li {
   width: 100vw;
   height: 75%;
-  margin: 20px;
+  margin: 1.042vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -48,7 +48,7 @@
 .goal-title {
   color: #000;
   font-family: Inter;
-  font-size: 52px;
+  font-size: 2.71vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -58,7 +58,7 @@
   width: 20vw;
   color: #000;
   font-family: Inter;
-  font-size: 19px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
