--- a/src/styles/Service.css
+++ b/src/styles/Service.css
@@ -1,6 +1,6 @@
 .service-wrapper {
   width: 100vw;
-  height: 75vh;
+  height: 42vw;
   background-color: #d0b8a8;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
 .service-title {
   color: #000;
   font-family: Inter;
-  font-size: 84px;
+  font-size: 4.375vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -28,7 +28,7 @@
 .service-content .service-li-element {
   width: 27vw;
   height: 16vw;
-  margin: 20px;
+  margin: 1vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -45,35 +45,35 @@
 .element-num {
   color: #000;
   font-family: Inter;
-  font-size: 52px;
+  font-size: 2.8vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 .element-title {
   color: #000;
   font-family: Inter;
-  font-size: 30px;
+  font-size: 1.6vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 .element-desc {
   color: #000;
   font-family: Inter;
-  font-size: 19px;
+  font-size: 1vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-top: 10px;
+  padding-left: 0.8vw;
+  padding-right: 0.8vw;
+  margin-top: 0.5vw;
 }
 
 .service-li-element[value="2"] {
