--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -1,6 +1,6 @@
 .team-wrapper {
   width: 100vw;
-  height: 90vh;
+  height: 50.625vw;
   background-color: #f8ede3;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
 .team-wrapper .title {
   color: #000;
   font-family: Inter;
-  font-size: 84px;
+  font-size: 4.375vw;
   font-weight: 700;
   text-align: center;
 }
@@ -19,7 +19,7 @@
 .card-wrapper {
   width: 100vw;
   height: auto;
-  padding: 32px 0;
+  padding: 1.7vw 0;
 }
 
 .swiper-slide {
@@ -38,20 +38,20 @@
   width: 55vw;
   height: 25vw;
   background-color: white;
-  border-radius: 20px;
-  box-shadow: 6px 6px 20px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 1.042vw;
+  box-shadow: 0.313vw 0.313vw 1.042vw 0vw rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: row;
   justify-content: start;
   align-items: center;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 1.25vw;
+  padding-right: 1.25vw;
 }
 
 .card .card-img {
   width: 24vw;
   height: 22vw;
-  border-radius: 20px;
+  border-radius: 1vw;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -67,16 +67,16 @@
 .card .card-content .card-name {
   color: #000;
   font-family: Inter;
-  font-size: 52px;
+  font-size: 2.7vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-bottom: 16px;
+  margin-bottom: 0.83vw;
 }
 .card .card-content .card-position {
   color: #000;
   font-family: Inter;
-  font-size: 24px;
+  font-size: 1.25vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -84,12 +84,12 @@
 .card .card-content .card-desc {
   color: #000;
   font-family: Inter;
-  font-size: 32px;
+  font-size: 1.67vw;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-  margin-top: 44px;
-  margin-bottom: 60px;
+  margin-top: 2.3vw;
+  margin-bottom: 3.125vw;
 }
 .card .card-content .card-social {
   display: flex;
@@ -101,7 +101,7 @@
 .card .card-content .card-social img {
   width: 4vw;
   height: 4vw;
-  margin-right: 32px;
+  margin-right: 1.67vw;
 }
 
 .swiper-pagination {
