--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -9,7 +9,7 @@
 }
 
 .about-content {
-  width: 40vw;
+  width: 34vw;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -26,30 +26,30 @@
   font-weight: 700;
   line-height: normal;
   margin-top: 0.5vw;
-  margin-bottom: 0.5vw;
+  margin-bottom: 2vw;
 }
 
 .about-content .about-desc {
   width: 26vw;
   color: #000;
   font-family: Inter;
-  font-size: 1vw;
+  font-size: 1.5vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
 }
 
 .about-content .about-team-btn {
-  width: 10vw;
-  height: 3vw;
+  width: 15vw;
+  height: 4vw;
   background-color: #7d6e83;
   color: #fff;
   font-family: Inter;
-  font-size: 1vw;
+  font-size: 1.5vw;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-top: 1.5vw;
+  margin-top: 3vw;
   margin-bottom: 0.5vw;
   border: none;
   border-radius: 1.8vw;
@@ -59,19 +59,79 @@
   align-items: center;
 }
 
-.about-img {
-  width: 33vw;
+.about-vid video {
+  /* width: 33vw; */
   height: 21vw;
-  background-image: url("../assets/about.png");
-  background-size: cover;
-  background-position: center;
+  border-radius: 2vw;
 }
 
 /* default large screen */
-/* medium screen */
-@media (min-width: 768px) and (max-width: 1023px) {
-}
-
 /* small screen */
 @media (max-width: 767px) {
+  .about {
+    width: 100vw;
+    height: 120vw;
+    background-color: #dfd3c3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-content {
+    width: 80vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+  }
+
+  .about-content .about-title {
+    width: 100%;
+    color: #000;
+    font-family: Inter;
+    font-size: 12vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+  }
+
+  .about-content .about-desc {
+    width: 80vw;
+    color: #000;
+    font-family: Inter;
+    font-size: 4vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding: 6vw 0vw;
+  }
+
+  .about-content .about-team-btn {
+    width: 30vw;
+    height: 9vw;
+    background-color: #7d6e83;
+    color: #fff;
+    font-family: Inter;
+    font-size: 3vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 4vw;
+    margin-bottom: 2vw;
+    border: none;
+    border-radius: 5vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .about-vid video {
+    height: 40vw;
+    margin-bottom: 4vw;
+  }
 }
