--- a/src/styles/Goal.css
+++ b/src/styles/Goal.css
@@ -58,7 +58,7 @@
   width: 20vw;
   color: #000;
   font-family: Inter;
-  font-size: 1vw;
+  font-size: 1.5vw;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -66,10 +66,73 @@
 }
 
 /* default large screen */
-/* medium screen */
-@media (min-width: 768px) and (max-width: 1023px) {
-}
 
 /* small screen */
 @media (max-width: 767px) {
+  .goal-wrapper {
+    width: 100vw;
+    height: 200vw;
+    background-color: #dfd3c3;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .goal-wrapper ul {
+    width: 75vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 3;
+  }
+
+  .goal-wrapper ul li {
+    width: 100vw;
+    height: 75%;
+    margin: 8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .goal-wrapper video {
+    display: none;
+    position: absolute;
+    width: 140.63vw;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+  }
+
+  .goal-icon {
+    width: 30vw;
+    height: 20vw;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .goal-title {
+    color: #000;
+    font-family: Inter;
+    font-size: 7vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .goal-desc {
+    width: 50vw;
+    color: #000;
+    font-family: Inter;
+    font-size: 4.5vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-align: center;
+  }
 }
