--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -46,10 +46,44 @@
 }
 
 /* default large screen */
-/* medium screen */
-@media (min-width: 768px) and (max-width: 1023px) {
-}
-
 /* small screen */
 @media (max-width: 767px) {
+  .navbar-wrapper {
+    background-color: #7d6e83;
+    border-bottom: 1px solid #7d6e83;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    height: 12vw;
+  }
+  .navbar-wrapper .menu {
+    width: 5vw;
+    height: 5vw;
+    background-image: url("../assets/burger.png");
+    background-size: cover;
+    background-position: center;
+    margin-left: 1.25vw;
+    margin-right: 1.25vw;
+  }
+
+  .navbar-wrapper .company-logo {
+    width: 9vw;
+    height: 6vw;
+    background-image: url("../assets/logo.png");
+    background-size: cover;
+    background-position: center;
+    margin-right: 1.25vw;
+  }
+
+  .navbar-wrapper a {
+    color: #000;
+    font-family: Inter;
+    font-size: 3.75vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
 }
