--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -36,7 +36,7 @@
 
 .card {
   width: 55vw;
-  height: 25vw;
+  height: 28vw;
   background-color: white;
   border-radius: 1.042vw;
   box-shadow: 0.313vw 0.313vw 1.042vw 0vw rgba(0, 0, 0, 0.25);
@@ -49,7 +49,7 @@
 }
 
 .card .card-img {
-  width: 24vw;
+  width: 52vw;
   height: 22vw;
   border-radius: 1vw;
   background-position: center;
@@ -88,8 +88,8 @@
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-  margin-top: 2.3vw;
-  margin-bottom: 3.125vw;
+  margin-top: 1vw;
+  margin-bottom: 1vw;
 }
 .card .card-content .card-social {
   display: flex;
@@ -106,6 +106,7 @@
 
 .swiper-pagination {
   --swiper-theme-color: #000;
+  translate: 3vw;
 }
 
 .swiper-pagination-bullet {
@@ -118,10 +119,98 @@
 }
 
 /* default large screen */
-/* medium screen */
-@media (min-width: 768px) and (max-width: 1023px) {
-}
 
 /* small screen */
 @media (max-width: 767px) {
+  .team-wrapper {
+    width: 100vw;
+    height: 150vw;
+    background-color: #f8ede3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .team-wrapper .title {
+    color: #000;
+    font-family: Inter;
+    font-size: 10vw;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .card {
+    width: 60vw;
+    height: 120vw;
+    background-color: white;
+    border-radius: 1.042vw;
+    box-shadow: 0.313vw 0.313vw 1.042vw 0vw rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 5vw 2vw;
+  }
+
+  .card .card-img {
+    width: 32vw;
+    height: 40vw;
+    border-radius: 1vw;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .card .card-content {
+    display: flex;
+    height: 60vw;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+
+  .card .card-content .card-name {
+    color: #000;
+    font-family: Inter;
+    font-size: 5vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 0vw;
+    padding: 3vw 0vw;
+  }
+
+  .card .card-content .card-position {
+    color: #000;
+    font-family: Inter;
+    font-size: 4vw;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .card .card-content .card-desc {
+    color: #000;
+    font-family: Inter;
+    font-size: 3vw;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-top: 2.3vw;
+    margin-bottom: 3.125vw;
+  }
+
+  .card .card-content .card-social img {
+    width: 6vw;
+    height: 6vw;
+    margin-right: 1.67vw;
+  }
+
+  .swiper-pagination {
+    --swiper-theme-color: #000;
+    translate: 5vw;
+  }
 }
